fixes & updates again

--- a/blog.html
+++ b/blog.html
@@ -91,52 +91,63 @@
 
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
 				</div>
 
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
 				</div>
 
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
 				</div>
 
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
 				</div>
 
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
 				</div>
 
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
 				</div>
-			</div>
 
 			<div class="blog-slider">
 				<div class="blog-slider__wrapper">
@@ -157,53 +168,66 @@
 			</div>
 
 			<div class="blog__wrapper">
+
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
 				</div>
 
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
 				</div>
 
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
 				</div>
 
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
 				</div>
 
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
 				</div>
 
 				<div class="news">
 					<img src="img/news-photo.jpg" alt="" class="news__photo">
-					<div class="news__header-wrapper">
+					<div class="news__text-wrapper">
+						<div class="news__header-wrapper">
 						<h2 class="news__header">Lorem ipsum dolor sit amet consectetur adipiscing elit</h2>
+						</div>
+						<a href="blog-one-news.html" class="news__button">Подробнее</a>
 					</div>
-					<a href="blog-one-news.html" class="news__button">Подробнее</a>
-				</div>			
+				</div>	
 
 				<div class="blog-pagination">
 					<div class="blog-pagination__wrapper">
@@ -247,7 +271,7 @@
 					<div class="games__column">
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
-							<li class="games__item"><a href="#">Поддержка</a></li>
+							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="#">Партнерам</a></li>
 							<li class="games__item"><a href="#">О Dsrkslot</a></li>
 							<li class="games__item"><a href="#">Блог</a></li>
@@ -410,67 +434,67 @@
 		<div class="modal-contact__close"></div>
 	</section>
 
-		<div class="modal-bg"></div> 
+	<div class="modal-bg"></div> 
 
-		<div id="preloader"></div>
+	<div id="preloader"></div>
 
-		<script type="text/javascript">
-			var preloader = document.getElementById("preloader");
-			function fadeOutnojquery(el){
-				el.style.opacity = 1;
-				var innerpreloader = setInterval(function() {
-					el.style.opacity = el.style.opacity - 0.05;
-					if (el.style.opacity <=0.05) {
-						clearInterval(innerpreloader);
-						preloader.style.display = "none";
-					}
-				},16);
-			}
-			window.onload = function(){setTimeout(function(){fadeOutnojquery(preloader);
-			},1000);};
-		</script>
-
-		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-
-		<script type="text/javascript" src="js/slick.min.js"></script>
-
-		<script type="text/javascript">
-			$('.blog-slider__wrapper').slick({
-				infinite: true,
-				autoplay: true,
-				autoplaySpeed: 3000,
-				slidesToShow: 1,
-				arrows: true,
-				responsive: [
-				{
-					breakpoint: 768,
-					settings: {
-						infinite: true,
-						autoplay: true,
-						autoplaySpeed: 3000,
-						slidesToShow: 1,
-						arrows: false
-					}
+	<script type="text/javascript">
+		var preloader = document.getElementById("preloader");
+		function fadeOutnojquery(el){
+			el.style.opacity = 1;
+			var innerpreloader = setInterval(function() {
+				el.style.opacity = el.style.opacity - 0.05;
+				if (el.style.opacity <=0.05) {
+					clearInterval(innerpreloader);
+					preloader.style.display = "none";
 				}
-				]
-			});
+			},16);
+		}
+		window.onload = function(){setTimeout(function(){fadeOutnojquery(preloader);
+		},1000);};
+	</script>
 
-			$('.top-games__wrapper').slick({
-				infinite: true,
-				autoplay: true,
-				autoplaySpeed: 3000,
-				slidesToShow: 7,
-				arrows: false
-			});
-		</script>
+	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 
-		<script type="text/javascript" src="js/tabs.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
 
-		<script type="text/javascript" src="js/mobile-menu.js"></script>
+	<script type="text/javascript">
+		$('.blog-slider__wrapper').slick({
+			infinite: true,
+			autoplay: true,
+			autoplaySpeed: 3000,
+			slidesToShow: 1,
+			arrows: true,
+			responsive: [
+			{
+				breakpoint: 768,
+				settings: {
+					infinite: true,
+					autoplay: true,
+					autoplaySpeed: 3000,
+					slidesToShow: 1,
+					arrows: false
+				}
+			}
+			]
+		});
 
-		<script type="text/javascript" src="js/fixed-bar.js"></script>
+		$('.top-games__wrapper').slick({
+			infinite: true,
+			autoplay: true,
+			autoplaySpeed: 3000,
+			slidesToShow: 7,
+			arrows: false
+		});
+	</script>
 
-		<script type="text/javascript" src="js/modals.js"></script>
+	<script type="text/javascript" src="js/tabs.js"></script>
+
+	<script type="text/javascript" src="js/mobile-menu.js"></script>
+
+	<script type="text/javascript" src="js/fixed-bar.js"></script>
+
+	<script type="text/javascript" src="js/modals.js"></script>
 
 	<script type="text/javascript" src="js/jquery.formstyler.min.js"></script>
 
@@ -478,5 +502,5 @@
 		$('select').styler();
 	</script>
 
-	</body>
-	</html>
+</body>
+</html>
