--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<div class="slide__text">
 						<span class="slide__upper-text">Розыгрыш каждую неделю</span>
 						<h1 class="slide__header">100% кэшбек</h1>
-						<a href="bonus.html" class="slide__button">Подробнее</a>
+						<a href="#" class="slide__button">Подробнее</a>
 					</div>
 				</div>
 			</div>
@@ -227,7 +227,7 @@
 					</select>
 				</form>
 
-				<div class="tab tab--first tab--active">
+				<div class="tab tab--active">
 					<h2 class="tab__header">Топ игры</h2>
 					<button class="tab__button">Случайная игра</button>
 
@@ -246,7 +246,7 @@
 					<div class="tab__more-button">Показать больше</div>
 				</div>
 
-				<div class="tab tab--second">
+				<div class="tab">
 					<h2 class="tab__header">Топ игры</h2>
 					<button class="tab__button">Случайная игра</button>
 
@@ -265,7 +265,7 @@
 					<div class="tab__more-button">Показать больше</div>
 				</div>
 
-				<div class="tab tab--third">
+				<div class="tab">
 					<h2 class="tab__header">Топ игры</h2>
 					<button class="tab__button">Случайная игра</button>
 
@@ -284,7 +284,7 @@
 					<div class="tab__more-button">Показать больше</div>
 				</div>
 
-				<div class="tab tab--fourth">
+				<div class="tab">
 					<h2 class="tab__header">Топ игры</h2>
 					<button class="tab__button">Случайная игра</button>
 
@@ -303,7 +303,7 @@
 					<div class="tab__more-button">Показать больше</div>
 				</div>
 
-				<div class="tab tab--fifth">
+				<div class="tab">
 					<h2 class="tab__header">Топ игры</h2>
 					<button class="tab__button">Случайная игра</button>
 
@@ -474,7 +474,7 @@
 					<div class="games__column">
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
-							<li class="games__item"><a href="#">Поддержка</a></li>
+							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="#">Партнерам</a></li>
 							<li class="games__item"><a href="#">О Dsrkslot</a></li>
 							<li class="games__item"><a href="#">Блог</a></li>
