--- a/free-spins.html
+++ b/free-spins.html
@@ -167,7 +167,7 @@
 			</div>
 		</section>
 
-<section class="games">
+		<section class="games">
 			<div class="games__wrapper">
 
 				<div class="games__list-wrapper">
@@ -197,9 +197,9 @@
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
 							<li class="games__item games__item--support">Поддержка</li>
-							<li class="games__item"><a href="#">Партнерам</a></li>
+							<li class="games__item"><a href="partners.html">Партнерам</a></li>
 							<li class="games__item"><a href="#">О Dsrkslot</a></li>
-							<li class="games__item"><a href="#">Блог</a></li>
+							<li class="games__item"><a href="blog.html">Блог</a></li>
 						</ul>
 					</div>
 				</div>
@@ -214,7 +214,6 @@
 				</div>
 			</div>
 		</section>
-
 		<section class="partners">
 			<div class="partners__wrapper">
 				<img src="img/partners.png" alt="">
