--- a/partners.html
+++ b/partners.html
@@ -160,7 +160,7 @@
 			</div>
 		</section>
 
-<section class="games">
+		<section class="games">
 			<div class="games__wrapper">
 
 				<div class="games__list-wrapper">
@@ -190,9 +190,9 @@
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
 							<li class="games__item games__item--support">Поддержка</li>
-							<li class="games__item"><a href="#">Партнерам</a></li>
+							<li class="games__item"><a href="partners.html">Партнерам</a></li>
 							<li class="games__item"><a href="#">О Dsrkslot</a></li>
-							<li class="games__item"><a href="#">Блог</a></li>
+							<li class="games__item"><a href="blog.html">Блог</a></li>
 						</ul>
 					</div>
 				</div>
