--- a/free-spins.html
+++ b/free-spins.html
@@ -51,7 +51,7 @@
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Reload бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">100% кэшбек</a></li>
+							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">100% кэшбек</a></li>
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Darkslot турнир</a></li>
@@ -63,7 +63,7 @@
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
 
 						<ul class="main-nav__dropdown">
-							<li class="main-nav__dropdown-item"><a href="#">О DarkSlot</a></li>
+							<li class="main-nav__dropdown-item"><a href="about.html">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Правила и условия</a></li>
 						</ul>
@@ -78,7 +78,6 @@
 			</div>
 		</div>
 	</header>
-
 
 	<div class="main-wrapper">
 
@@ -186,7 +185,7 @@
 						<ul class="games__list">
 							<li class="games__item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="games__item"><a href="#">Reload бонус</a></li>
-							<li class="games__item"><a href="#">100% Кэшбек</a></li>
+							<li class="games__item"><a href="everyweek-cashback.html">100% Кэшбек</a></li>
 							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="games__item"><a href="#">Darkslot турнир</a></li>
@@ -198,7 +197,7 @@
 						<ul class="games__list">
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
-							<li class="games__item"><a href="#">О Dsrkslot</a></li>
+							<li class="games__item"><a href="about.html">О Dsrkslot</a></li>
 							<li class="games__item"><a href="blog.html">Блог</a></li>
 						</ul>
 					</div>
@@ -214,6 +213,7 @@
 				</div>
 			</div>
 		</section>
+		
 		<section class="partners">
 			<div class="partners__wrapper">
 				<img src="img/partners.png" alt="">
