about darkslot page

--- a/about.html
+++ b/about.html
@@ -81,126 +81,176 @@
 
 	<div class="main-wrapper">
 
-		<section class="everyweek-cashback">
-			<div class="everyweek-cashback__wrapper">
-				<h2 class="everyweek-cashback__header">Еженедельный розыгрыш кэшбека</h2>
-				<span class="everyweek-cashback__back-text">#халяяява</span>
-				<p class="everyweek-cashback__text">Каждый понедельник мы с помощью генератора случайных чисел среди всех игроков , отберём 10 счастливчиков которые получат кешбек проиграных средств от 10% до 100%</p>
+		<section class="about">
+			<div class="about__wrapper">
+				<div class="about__text-wrapper">
+					<div class="about__header-wrapper">
+						<h1 class="about__header">Революция</h1>
+						<h2 class="about__underheader">В мире онлайн казино!</h2>
+					</div>
 
-				<div class="places">
-					<div class="places__item places__item--second">
-						<h3 class="places__header">50%</h3>
-						<span class="place__bottom-text">2-3 место</span>
-					</div>
-					<div class="places__item places__item--first">
-						<h3 class="places__header">100%</h3>
-						<span class="place__bottom-text">1 место</span>
-					</div>
-					<div class="places__item places__item--third">
-						<h3 class="places__header">10%</h3>
-						<span class="place__bottom-text">4-10 место</span>
-					</div>
+					<p class="about__text">Что это значит? - Мы предоставляем нашим друзьям только лучшие условия, что бы каждый мог насладиться играми каждый день, в любой день и при любых обстоятельствах!</p>
 				</div>
 
-				<div class="everyweek-cashback__condition">
-					<p class="everyweek-cashback__condition-text">Участие в акции могут принять участники достигшие <span class="everyweek-cashback__second-level">2-го уровня</span> <span class="everyweek-cashback__hint">?</span></p>
-				</div>
-			</div>
-		</section>
+				<div class="about__dignity-wrapper">
 
-		<section class="broadcast">
-			<div class="broadcast__wrapper">
-				<div class="broadcast__text-wrapper">
-					<h3 class="broadcast__header">Каждый понедельник в 16:00 здесь проводится трансляция отбора победителей </h3>
-
-					<div class="timer timer--everyweek">
-						<div class="timer__wrapper">
-							<div class="timer__numbers-wrapper">
-								<span class="timer__numbers">5</span>
-								<span class="timer__numbers-text">Дней</span>
-							</div>
-
-							<span class="timer__separator">:</span>
-
-							<div class="timer__numbers-wrapper">
-								<span class="timer__numbers">10</span>
-								<span class="timer__numbers-text">Часов</span>
-							</div>
-
-							<span class="timer__separator">:</span>
-
-							<div class="timer__numbers-wrapper">
-								<span class="timer__numbers">16</span>
-								<span class="timer__numbers-text">Минут</span>
-							</div>
-
-							<span class="timer__separator">:</span>
-
-							<div class="timer__numbers-wrapper">
-								<span class="timer__numbers">25</span>
-								<span class="timer__numbers-text">Секунд</span>
-							</div>
+					<div class="dignity">
+						<div class="dignity__image"></div>
+						<div class="dignity__text-wrapper">
+							<h3 class="dignity__header">Поддержка</h3>
+							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
 						</div>
 					</div>
 
-					<button class="broadcast__button">Уведомить о начале трансляции</button>
-				</div>
+					<div class="dignity">
+						<div class="dignity__image"></div>
+						<div class="dignity__text-wrapper">
+						<h3 class="dignity__header">Доверие</h3>
+							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
+						</div>
+					</div>
 
-				<div class="broadcast__image-wrapper"></div>
+					<div class="dignity">
+						<div class="dignity__image"></div>
+						<div class="dignity__text-wrapper">
+							<h3 class="dignity__header">Молниеносные выплаты</h3>
+							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
+						</div>
+					</div>
+
+					<div class="dignity">
+						<div class="dignity__image"></div>
+						<div class="dignity__text-wrapper">
+							<h3 class="dignity__header">Акции и бонусы</h3>
+							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 
-
-		<section class="deposit-conditions">
-			<div class="deposit-conditions__wrapper">
-				<div class="deposit-condition">
-					<span class="deposit-condition__description">Каждому участнику после 23:00 (Мск) воскресенья будет вручён Тикет с номером на право участия в акции и выслан на почту</span>
+		<section class="slider">
+			<div class="slide">
+				<div class="slide__image-wrapper">
+					<img src="img/slide-image-2.png" alt="slide" class="slide__image">
 				</div>
 
-				<div class="deposit-condition">
-					<span class="deposit-condition__description">Все средства полученные в данной акции подлежат отыгрышу x3 (вейджер)</span>
-				</div>
+				<div class="slide__form-bg">
+					<div class="slide__form-wrapper">
 
-				<div class="deposit-condition">
-					<span class="deposit-condition__description">Суммы компенсаций конфедециальны</span>
+						<div class="slide-bonus">
+							<span class="slide-bonus__first-line">10$</span>
+							<span class="slide-bonus__second-line">без депозита</span>
+							<span class="slide-bonus__third-line">- за регистрацию -</span>
+							<a href="#" class="slide-bonus__link">Подробнее</a>
+						</div>
+
+						<form action="#" class="registration-form-mini">
+							<input type="email" placeholder="Email" class="registration-form-mini__email">
+							<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
+							<input type="password" placeholder="Пароль" class="registration-form-mini__password">
+							<input type="password" placeholder="Подтверждение пароля" class="registration-form-mini__password-confirm">
+							<select name="" id="slide-reg-select" class="registration-form-mini__select">
+								<option value="currency" selected disabled>Валюта</option>
+								<option value="rub">Рубли</option>
+								<option value="euro">Евро</option>
+								<option value="dollar">Доллары</option>
+								<option value="btc">Биткоины</option>
+							</select>
+
+							<input type="checkbox" id="slide-checkbox" class="registration-form-mini__checkbox">
+							<label for="slide-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
+
+							<input type="submit" class="registration-form-mini__button" value="Регистрация">
+						</form>
+
+						<button class="slide__reg-button">Регистрация</button>
+					</div>
 				</div>
 			</div>
-		</section>
 
-		<section class="registration">
-			<div class="registration__wrapper">
-
-				<div class="registration-bonus">
-					<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
-					<h3 class="registration-bonus__underheader">Приветственный бонус</h3>	
-					<span class="registration-bonus__count">1800$</span>
+			<div class="slide">
+				<div class="slide__image-wrapper">
+					<img src="img/slide-image.png" alt="slide" class="slide__image">
 				</div>
 
-				<div class="registration__character-wrapper">
-					<img src="img/tiger.png" alt="toger" class="registration__character">
+				<div class="slide__wrapper">
+					<div class="slide__text">
+						<span class="slide__upper-text">Розыгрыш каждую неделю</span>
+						<h1 class="slide__header">100% кэшбек</h1>
+						<a href="#" class="slide__button">Подробнее</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="slide">
+				<div class="slide__image-wrapper">
+					<a href="day-slot.html">
+						<img src="img/day-slot.png" alt="slide" class="slide__image">
+					</a>
 				</div>
 
-				<form action="#" class="registration-form-mini registration-form-mini--bottom">
-					<input type="email" placeholder="Email" class="registration-form-mini__email">
-					<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
-					<input type="password" placeholder="Пароль" class="registration-form-mini__password">
-					<input type="password" placeholder="Подтверждение пароля" class="registration-form-mini__password-confirm">
-					<select name="" id="bottom-reg-select" class="registration-form-mini__select">
-						<option value="currency" selected disabled>Валюта</option>
-						<option value="rub">Рубли</option>
-						<option value="euro">Евро</option>
-						<option value="dollar">Доллары</option>
-						<option value="btc">Биткоины</option>
-					</select>
+				<div class="slide__button-wrapper">
+					<a href="day-slot.html" class="slide__button slide__button--centered">Подробнее</a>
+				</div>
+			</div> 
 
-					<input type="checkbox" id="bottom-form-checkbox" class="registration-form-mini__checkbox">
-					<label for="bottom-form-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
+			<div class="slide">
+				<div class="slide__image-wrapper">
+					<img src="img/wood-bg.png" alt="slide" class="slide__image">
+				</div>
 
-					<input type="submit" class="registration-form-mini__button" value="Регистрация">
-				</form>
+				<div class="slide__content-wrapper">
 
-				<button class="registration__reg-button">Регистрация</button>
-				
+					<section class="registration registration--slide">
+						<div class="registration__wrapper">
+
+							<div class="registration-bonus">
+								<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
+								<h3 class="registration-bonus__underheader">Приветственный бонус</h3>	
+								<span class="registration-bonus__count">1800$</span>
+							</div>
+
+							<div class="registration__character-wrapper">
+								<img src="img/tiger.png" alt="toger" class="registration__character">
+							</div>
+
+							<form action="#" class="registration-form-mini registration-form-mini--slide">
+								<input type="email" placeholder="Email" class="registration-form-mini__email">
+								<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
+								<input type="password" placeholder="Пароль" class="registration-form-mini__password">
+								<input type="password" placeholder="Подтверждение пароля" class="registration-form-mini__password-confirm">
+								<select name="" id="bottom-reg-select" class="registration-form-mini__select">
+									<option value="currency" selected disabled>Валюта</option>
+									<option value="rub">Рубли</option>
+									<option value="euro">Евро</option>
+									<option value="dollar">Доллары</option>
+									<option value="btc">Биткоины</option>
+								</select>
+
+								<input type="checkbox" id="bottom-form-checkbox" class="registration-form-mini__checkbox">
+								<label for="bottom-form-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
+
+								<input type="submit" class="registration-form-mini__button" value="Регистрация">
+							</form>
+
+							<button class="registration__reg-button">Регистрация</button>
+
+						</div>
+					</section>
+				</div>
+			</div>
+
+			<div class="slide">
+				<div class="slide__image-wrapper">
+					<a href="free-spins.html">
+						<img src="img/free-spins.png" alt="slide" class="slide__image">
+					</a>
+				</div>
+
+				<div class="slide__button-wrapper">
+					<a href="free-spins.html" class="slide__button slide__button--centered">Подробнее</a>
+				</div>
 			</div>
 		</section>
 
