--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/jquery.formstyler.css">
+	<link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
 	
@@ -95,7 +96,7 @@
 				<div class="about__dignity-wrapper">
 
 					<div class="dignity">
-						<div class="dignity__image"></div>
+						<div class="dignity__image content"></div>
 						<div class="dignity__text-wrapper">
 							<h3 class="dignity__header">Поддержка</h3>
 							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
@@ -103,7 +104,7 @@
 					</div>
 
 					<div class="dignity">
-						<div class="dignity__image"></div>
+						<div class="dignity__image content"></div>
 						<div class="dignity__text-wrapper">
 						<h3 class="dignity__header">Доверие</h3>
 							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
@@ -111,7 +112,7 @@
 					</div>
 
 					<div class="dignity">
-						<div class="dignity__image"></div>
+						<div class="dignity__image content"></div>
 						<div class="dignity__text-wrapper">
 							<h3 class="dignity__header">Молниеносные выплаты</h3>
 							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
@@ -119,7 +120,7 @@
 					</div>
 
 					<div class="dignity">
-						<div class="dignity__image"></div>
+						<div class="dignity__image content"></div>
 						<div class="dignity__text-wrapper">
 							<h3 class="dignity__header">Акции и бонусы</h3>
 							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
@@ -516,6 +517,10 @@
 	<script type="text/javascript">
 		$('select').styler();
 	</script>
+
+	<script type="text/javascript" src="js/jquery.viewportchecker.min.js"></script>
+
+	<script type="text/javascript" src="js/animation-delay.js"></script>
 
 </body>
 </html>
