--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
 						<div class="dignity__image content"></div>
 						<div class="dignity__text-wrapper">
 						<h3 class="dignity__header">Доверие</h3>
-							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
+							<p class="dignity__text">Нам доверяют сотни игроков каждый день, благодаря лицензионным играм и нашей собственной лицензией предоставляемой...</p>
 						</div>
 					</div>
 
@@ -115,7 +115,7 @@
 						<div class="dignity__image content"></div>
 						<div class="dignity__text-wrapper">
 							<h3 class="dignity__header">Молниеносные выплаты</h3>
-							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
+							<p class="dignity__text">Мы заботимся о том, что бы ваши победы стали реальными средствами меньше чем за час.</p>
 						</div>
 					</div>
 
@@ -123,14 +123,14 @@
 						<div class="dignity__image content"></div>
 						<div class="dignity__text-wrapper">
 							<h3 class="dignity__header">Акции и бонусы</h3>
-							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
+							<p class="dignity__text">Уюху! Море бонусов и акций: приветственный бонус за регистрацию; reload бонус 50% один раз в неделю, в любой день; фри спины по четвергам , Слот дня по вторникам; 100% cashback, розыгрыш в понедельник; турнир по пятницам!</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 
-		<section class="slider">
+		<section class="slider slider--about">
 			<div class="slide">
 				<div class="slide__image-wrapper">
 					<img src="img/slide-image-2.png" alt="slide" class="slide__image">
@@ -266,6 +266,11 @@
 							<li class="games__item"><a href="#">Amatic</a></li>
 							<li class="games__item"><a href="#">Ezugi</a></li>
 							<li class="games__item"><a href="#">Softswiss</a></li>
+							<li class="games__item"><a href="#">Лобби</a></li>
+							<li class="games__item"><a href="#">Слоты</a></li>
+							<li class="games__item"><a href="#">Джекпот</a></li>
+							<li class="games__item"><a href="#">Настольные</a></li>
+							<li class="games__item"><a href="#">Live диллер</a></li>
 						</ul>
 					</div>
 
