--- a/free-spins.html
+++ b/free-spins.html
@@ -177,6 +177,11 @@
 							<li class="games__item"><a href="#">Amatic</a></li>
 							<li class="games__item"><a href="#">Ezugi</a></li>
 							<li class="games__item"><a href="#">Softswiss</a></li>
+							<li class="games__item"><a href="#">Лобби</a></li>
+							<li class="games__item"><a href="#">Слоты</a></li>
+							<li class="games__item"><a href="#">Джекпот</a></li>
+							<li class="games__item"><a href="#">Настольные</a></li>
+							<li class="games__item"><a href="#">Live диллер</a></li>
 						</ul>
 					</div>
 
