modals for recovery password

--- a/about.html
+++ b/about.html
@@ -406,7 +406,6 @@
 		<div class="modal-registration__close"></div>
 	</section>
 
-
 	<section class="modal-enter">
 		<div class="modal-enter__character-wrapper">
 			<img src="img/bear.png" alt="bear" class="modal-enter__character">
@@ -437,6 +436,8 @@
 
 		<div class="modal-enter__close"></div>
 	</section>
+
+	<section class="forgot-password"></section>
 
 	<section class="modal-contact">
 		<div class="modal-contact__character-wrapper">
